--- a/app/views/home/application.html.erb
+++ b/app/views/home/application.html.erb
@@ -324,6 +324,13 @@ td.text-right {
   opacity: 1;
   right: 0;
 }
+
+@media only screen and (max-width: 600px) {
+  .w-slider {
+    height: 100px !important;
+  }
+
+}
     </style>
 <%end%> 
 <div style="margin-bottom: 100px;">
