--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -11,6 +11,12 @@
           letter-spacing: 1px;
           font-family: 'Roboto Condensed', sans-serif;
      }
+
+          @media only screen and (max-width: 600px) {
+     .align_height_for_mobile {
+      height: 140px;
+     }
+}
     
 
     </style>
@@ -22,8 +28,8 @@
     <h2 class="-5"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Contact Us</p></h2>
     </div>
     <div class="row-3 w-row">
-      <div class="column-5 w-col w-col-6">
-        <div class="card">
+      <div class="column-6 w-col w-col-6">
+        <div class="card align_height_for_mobile">
           <div class="row-5 w-row">
             <div class="w-col w-col-9" style="margin-left: 20px;">
               <h4 class="heading-8" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Dr. Chandrika Parmar</h4>
@@ -35,7 +41,7 @@
         </div>
       </div>
       <div class="column-6 w-col w-col-6">
-        <div class="card">
+        <div class="card align_height_for_mobile">
           <div class="row-4 w-row">
             <div class="column-7 w-col w-col-9" style="margin-left: 20px;">
               <h4 class="heading-8" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Ms. Ranjeeta Bhattacharya</h4>
