--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -30,6 +30,14 @@
     height: 60px !important;
   }
 }*/
+
+
+@media only screen and (max-width: 600px) {
+  .w-slider {
+    height: 100px !important;
+  }
+
+}
     </style>
 <%end%> 
 
