--- a/app/views/home/eac.html.erb
+++ b/app/views/home/eac.html.erb
@@ -13,18 +13,33 @@
           letter-spacing: 1px;
           font-family: 'Roboto Condensed', sans-serif;
      }
+
+     @media only screen and (max-width: 600px) {
+           .align_for_mobile {
+      text-align: center;
+     }
+
+     .mobile_height {
+      height: 360px;
+     }
+
+     .align_height_for_mobile {
+      height: 220px;
+     }
+}
+
     
 
     </style>
 <%end%> 
     <div style="margin-bottom: 100px;">
       <div class="heading-tittle color-black w-container">
-        <h2 class="-5 " style="margin: 30px 0px 30px 0px;"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> External advisory committee </p></h2>
+        <h2 class="-5 " style="margin: 30px 0px 30px 0px;"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a; line-height: 30px;"> External advisory committee </p></h2>
         <div class="row-2 w-row">
           <div class="column-6 w-col w-col-6">
-            <div class="card">
+            <div class="card align_height_for_mobile">
               <div class="row-12 w-row">
-                <div class="w-col w-col-3">
+                <div class="w-col w-col-3 align_for_mobile">
                   <img src="../Mr-Amit-Jakhar.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%">
                 </div>
                 <div class="column-7 w-col w-col-9">
@@ -49,7 +64,7 @@
                     <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
-                <div class="w-col w-col-3">
+                <div class="w-col w-col-3 align_for_mobile">
                   <img src="../Dr.-Bhaskar-Chatterjee.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
                 <div class="column-7 w-col w-col-9">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Bhaskar Chatterjee</h4>
@@ -67,7 +82,7 @@
           <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
-                <div class="w-col w-col-3">
+                <div class="w-col w-col-3 align_for_mobile">
                   <img src="../Prof-Carole-Parkes.jpg" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
                 <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Carole Parkes</h4>
@@ -81,7 +96,7 @@
                     <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
-                <div class="w-col w-col-3">
+                <div class="w-col w-col-3 align_for_mobile">
                   <img src="../DrHChaturvedi.png" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
                 <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. H Chaturvedi</h4>
@@ -103,7 +118,7 @@
                     <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
-                <div class="w-col w-col-3">
+                <div class="w-col w-col-3 align_for_mobile">
                   <img src="../Kamal-Singh-Executive-Director-UN-Global-Compact-Network-India.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
                 <div class="w-col w-col-9">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Mr. Kamal Singh</h4>
@@ -114,9 +129,9 @@
             </div>
           </div>
           <div class="column-6 w-col w-col-6">
-            <div class="card">
+            <div class="card mobile_height">
               <div class="row-12 w-row">
-                 <div class="w-col w-col-3">
+                 <div class="w-col w-col-3 align_for_mobile">
                   <img src="../Dr.-K-Kuperan-Vishwanathan.jpg" width="117" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
                  <div class="w-col w-col-9">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. K Kuperan Vishwanathan</h4>
@@ -135,7 +150,7 @@
                                 <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
-                <div class="w-col w-col-3">
+                <div class="w-col w-col-3 align_for_mobile">
                   <img src="../Dr.-Pamsy-Hui.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
                 <div class="w-col w-col-9">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Pamsy Hui</h4>
@@ -148,7 +163,7 @@
           <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
-                <div class="w-col w-col-3">
+                <div class="w-col w-col-3 align_for_mobile">
                   <img src="../Professor-PD-Jose.jpg" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
                 <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. P.D. Jose</h4>
@@ -170,7 +185,7 @@
                             <div class="column-6 w-col w-col-6">
             <div class="card">
               <div class="row-12 w-row">
-                <div class="w-col w-col-3">
+                <div class="w-col w-col-3 align_for_mobile">
                   <img src="../Prof.-Stephen-Yong-Seung-Park.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
                 <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
                   <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Stephen Yong-Seung Park</h4>
