--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -31,6 +31,9 @@
   .w-tab-content {
     overflow: inherit !important;
   }
+  .margin_for_mobile_adjust {
+    margin:0px !important;
+  }
 }
 
 .w-slider {height: 265px;}
@@ -327,7 +330,7 @@ td.text-right {
 
 
 
-        <div data-duration-in="300" data-duration-out="100" class="w-tabs" style="max-width: 940px !important; margin: 0px 170px 0px 170px;">
+        <div data-duration-in="300" data-duration-out="100" class="w-tabs margin_for_mobile_adjust" style="max-width: 940px !important; margin: 0px 170px 0px 170px;">
           <div class="tabs-menu w-tab-menu">
             <a data-w-tab="Tab 1" class="open-tab w-inline-block w-tab-link w--current">
               <div style="font-size: 18px">INR</div>
