--- a/app/views/home/hotels.html.erb
+++ b/app/views/home/hotels.html.erb
@@ -47,8 +47,17 @@
 .w-col-9 {
       width: 100%;
 }
+@media only screen and (max-width: 600px) {
+.column-4 {
+  padding-left: 0px !important;
+  text-align: center;
+}
 
+.w-col-9 {
+  margin-left: 0px !important;
+}
 
+}
     </style>
 <%end%> 
 
