--- a/app/views/home/org.html.erb
+++ b/app/views/home/org.html.erb
@@ -12,20 +12,32 @@
           letter-spacing: 1px;
           font-family: 'Roboto Condensed', sans-serif;
      }
-    
+         @media only screen and (max-width: 600px) {
+           .align_for_mobile {
+      text-align: center;
+     }
+
+     .mobile_height {
+      height: 260px !important;
+     }
+}
+
+  .mobile_height {
+    height: 140px;
+  }
 
     </style>
 <%end%> 
 <div>
   <div class="container-5 w-container">
     <div class="heading-tittle color-black w-container">
-      <h2 style="margin: 0px 0px 30px 0px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Organizing Committee </p></h2>
+      <h2 style="margin: 0px 0px 30px 0px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a; line-height: 32px;"> Organizing Committee </p></h2>
     </div>
     <div class="row-2 w-row">
       <div class="column-6 w-col w-col-6">
-        <div class="card" style="height: 140px !important;">
+        <div class="card mobile_height">
           <div class="row-12 w-row">
-            <div class="w-col w-col-3"><img src="../DrChandrikaParmar.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
+            <div class="w-col w-col-3 align_for_mobile"><img src="../DrChandrikaParmar.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="column-7 w-col w-col-9" style="margin-top: 20px;">
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Chandrika Parmar</h4>
               <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor, SPJIMR</h5>
@@ -34,9 +46,9 @@
         </div>
       </div>
       <div class="column-6 w-col w-col-6">
-        <div class="card" style="height: 140px !important;">
+        <div class="card mobile_height">
           <div class="row-12 w-row">
-            <div class="w-col w-col-3"><img src="../ProfAditiDivatia.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
+            <div class="w-col w-col-3 align_for_mobile"><img src="../ProfAditiDivatia.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="column-7 w-col w-col-9" style="margin-top: 20px;">
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Aditi Divatia</h4>
               <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor, SPJIMR</h5>
@@ -47,9 +59,9 @@
     </div>
     <div class="row-2 w-row">
       <div class="column-6 w-col w-col-6">
-        <div class="card" style="height: 140px !important;">
+        <div class="card mobile_height">
           <div class="row-12 w-row">
-            <div class="w-col w-col-3"><img src="../ProfJagdishRattanani.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
+            <div class="w-col w-col-3 align_for_mobile"><img src="../ProfJagdishRattanani.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="column-7 w-col w-col-9" style="margin-top: 25px;">
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Mr. Jagdish Rattanani</h4>
               <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Editor, SPJIMR</h5>
@@ -58,9 +70,9 @@
         </div>
       </div>
         <div class="column-6 w-col w-col-6">
-        <div class="card" style="height: 140px !important;">
+        <div class="card mobile_height">
           <div class="row-12 w-row">
-            <div class="w-col w-col-3"><img src="../DrNirjaMattoo.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
+            <div class="w-col w-col-3 align_for_mobile"><img src="../DrNirjaMattoo.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="column-7 w-col w-col-9" style="margin-top: 25px;">
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Nirja Mattoo</h4>
               <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Chairperson of C-DoCC, SPJIMR
@@ -73,9 +85,9 @@
 
     <div class=" w-row"> 
     <div class="column-6 w-col w-col-6">
-        <div class="card" style="height: 140px !important;">
+        <div class="card mobile_height">
           <div class="row-12 w-row">
-            <div class="w-col w-col-3"><img src="../ProfDeepaKrishnan.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
+            <div class="w-col w-col-3 align_for_mobile"><img src="../ProfDeepaKrishnan.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="w-col w-col-9" style="margin-top: 20px;">
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Deepa Krishnan</h4>
               <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Head of Abhyudaya, SPJIMR
