--- a/app/views/home/schedule.html.erb
+++ b/app/views/home/schedule.html.erb
@@ -12,7 +12,12 @@
           font-family: 'Roboto Condensed', sans-serif;
      }
     
+@media only screen and (max-width: 600px) {
+  .w-slider {
+    height: 100px !important;
+  }
 
+}
     </style>
 <%end%> 
 
@@ -54,7 +59,7 @@
         <div class="w-slider-nav w-round"></div>
       </div>
       <div class="w-container"></div>
-     <h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">COLLOQIUM PROGRAMME SCHEDULE  </p></h2>
+     <h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;line-height: 32px;">COLLOQIUM PROGRAMME SCHEDULE  </p></h2>
     </div>
       
     </div>
