--- a/app/views/home/unglobal.html.erb
+++ b/app/views/home/unglobal.html.erb
@@ -28,7 +28,7 @@
     	</div>
     	<div class="w-col w-col-9">
     		<div class="w-container">
-    	<p style="line-height: 1.6; font-size: 16px; color: #333;">
+    	<p style="line-height: 1.6; font-size: 16px; color: #333; text-align: justify;">
     		The UN Global Compact is the world's largest corporate sustainability initiative. It is a call to companies to align strategies and operations with universal principles on human rights, labour, environment and anti-corruption, and take actions that advance societal goals. 
 At the UN Global Compact, we aim to mobilize a global movement of sustainable companies and stakeholders to create the world we want. To make this happen, the UN Global Compact supports companies to:<br>
 
