--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -131,5 +131,22 @@
 
 
 
+@media only screen and (max-width: 600px) {
+    .accent {
+        height: 130px !important;
+    }
+
+    .card {
+      height: 300px;
+    }
+
+    .dropdwon-toggle {
+      margin-top: 0px !important;
+    }
+}
+
+
+
+
 
 
