--- a/app/views/home/cochair.html.erb
+++ b/app/views/home/cochair.html.erb
@@ -233,6 +233,20 @@ input[type='checkbox'] {
   padding: .5rem 1rem;
 } 
 
+@media only screen and (max-width: 600px) {
+  .w-slider {
+    height: 100px !important;
+  }
+       .align_for_mobile {
+      text-align: center;
+     }
+
+     .mobile_height {
+      height: 260px !important;
+     }
+
+}
+
 
     </style>
 <%end%> 
@@ -269,7 +283,7 @@ input[type='checkbox'] {
       <div class="column-6 w-col w-col-6">
         <div class="card-track">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../Dr.-Sandip-Anand.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
+            <div class="w-col w-col-3 align_for_mobile"><img src="../Dr.-Sandip-Anand.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sandip Anand</h4>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor, Xavier Institute of Management
@@ -301,7 +315,7 @@ input[type='checkbox'] {
       <div class="column-6 w-col w-col-6">
         <div class="card-track">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../Dr.-Sapna-Narula.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
+            <div class="w-col w-col-3 align_for_mobile"><img src="../Dr.-Sapna-Narula.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="column-7 w-col w-col-9">
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sapna Narula</h4>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor & Head</h5>
@@ -333,7 +347,7 @@ Dr. Narula is an extraordinary scholar, with a gold medal from Delhi University 
       <div class="column-6 w-col w-col-6">
         <div class="card-track" >
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../Dr.Preeti-Tiwari.jpg" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
+            <div class="w-col w-col-3 align_for_mobile"><img src="../Dr.Preeti-Tiwari.jpg" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="w-col w-col-9" style="margin-top: 5px;">
               <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Preeti Tiwari</h4>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Assistant Professor (Strategy)</h5>
