--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -70,6 +70,19 @@ a:hover {
   /*color: white !important;*/
 }
 
+     @media only screen and (max-width: 600px) {
+li {
+  width: 100% !important;
+}
+ul {
+  margin-left: -40px !important; 
+}
+
+    .w-slider {
+        height: 70px !important;
+    }
+}
+
 
     </style>
 <%end%> 
