--- a/app/views/home/trackchairs.html.erb
+++ b/app/views/home/trackchairs.html.erb
@@ -1398,7 +1398,7 @@ As a specialist in the field of Public Policy, he has been engaged with Social A
             <div class="column-6 w-col w-col-6" id="11" style="margin-top: 20px;">
         <div class="card-track">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3" style="text-align: center"><img src="../track/ProfSatyajitMajumdar.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
+            <div class="w-col w-col-3" style="text-align: center"><img src="../track/ProfSatyajitMajumdar.JPG" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important; font-family: 'Roboto Condensed', sans-serif;">Prof. Satyajit Majumdar</h4>
               <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px;color:#6c757d!important ">SOCIAL ENTREPRENEURSHIP</p>
