--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -147,7 +147,7 @@ ul {
           </li>
 
           <li style="width:50%;">
-            <a href="/trackdetails#3"><i class="fa fa-newspaper-o"></i><p style="padding-top: 20px; display: inline">  Design Thinking in Management</p>
+            <a href="/trackdetails#3"><img src="../Icons/architecture.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline">  Design Thinking in Management</p>
             </a>
           </li>
 
